--- a/src/app/exercise1/exerciseOne.module.css
+++ b/src/app/exercise1/exerciseOne.module.css
@@ -1,9 +1,10 @@
 .main {
   display: flex;
-  flex-direction: column;
   gap: 32px;
   grid-row-start: 2;
   align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .page {
@@ -11,15 +12,17 @@
   grid-template-rows: 20px 1fr 20px;
   align-items: center;
   justify-items: center;
-  min-height: 100svh;
+  min-height: 100vh;
   gap: 64px;
   margin-top: 1rem;
+  padding: 0 16px;
 }
 
 .footer {
   grid-row-start: 3;
   display: flex;
   gap: 24px;
+  justify-content: center;
 }
 
 @media (max-width: 600px) {
