--- a/src/components/RangeFull/RangeFull.module.css
+++ b/src/components/RangeFull/RangeFull.module.css
@@ -8,10 +8,24 @@
   margin: auto;
 }
 
-.inputContainer {
-  display: flex;
-  align-items: center;
-  gap: 8px;
+.rangeTrack {
+  position: relative;
+  width: 100%;
+  height: 8px;
+  background-color: #ddd;
+  border-radius: 4px;
+}
+
+.handle {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  background-color: #000000;
+  border-radius: 50%;
+  cursor: grab;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  touch-action: none;
 }
 
 .label {
@@ -23,29 +37,7 @@
 }
 
 .valueInput {
-  width: 60px;
-  padding: 4px;
-  font-size: 14px;
-  text-align: center;
-}
-
-.rangeTrack {
-  position: relative;
-  width: 100%;
-  height: 8px;
-  background-color: #ddd;
-  border-radius: 4px;
-}
-
-.handle {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  background-color: #000000;
-  border-radius: 50%;
-  cursor: grab;
-  transform: translate(-50%, -50%);
-  top: 50%;
+  width: 55px;
 }
 
 @media (max-width: 768px) {
@@ -55,11 +47,12 @@
     gap: 12px;
   }
 
-  .label {
-    font-size: 14px;
+  .handle {
+    width: 20px;
+    height: 20px;
   }
 
-  .valueInput {
-    width: 50px;
+  .label {
+    font-size: 14px;
   }
 }
